--- a/src/widgets/SideBar/ui/SideBar/SideBar.module.scss
+++ b/src/widgets/SideBar/ui/SideBar/SideBar.module.scss
@@ -3,7 +3,7 @@
   width: var(--sidebar-width);
   background: var(--inverted-bg-color);
   position: relative;
-  transition: width .3s;
+  transition: width 0.3s;
 }
 
 .collapsed {
@@ -21,4 +21,3 @@
 .lang {
   margin-left: 20px;
 }
-
