--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -20,7 +20,6 @@
 
   // Цвета
   --overlay-color: rgba(0 0 0 / 60%);
-  /* stylelint-disable-next-line color-hex-length */
-  --red-light: #ff0000;
+  --red-light: #f00;
   --red-dark: #ce0505;
 }
